  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, melomcr, mdd31, ianmkenney, richardjgowers, hmacdope,
         orbeckst, scal444, p-j-smith, edisj, Atharva7K, ojeda-e

 * 2.1.0

Fixes
  * Added missing exe_err import in hole.py. Fixed a bug in HoleAnalysis where 
    kwarg was passed instead of object to generate path (Issue #3493, PR #3496)
  * Fixes creation of vmd surfaces in hole2 when using non-contiguous frames
    with start/stop/step (Issue #3476)
  * Allow empty strings to be passed to HydrogenBondAnalysis (Issue #3453).
  * Avoid integer overflow in NSGrid with too many grids (Issue #3183)
  * Fix ITPParser charge reading (Issue #3419).
  * TRRWriter preserves timestep data (Issue #3350).
  * Fixed Universe creation from a custom object which only provided a topology,
    previously raised a TypeError. (Issue #3443)
  * Documentation fixes (Issues #3224, #2667)
  * Fixed string attributes (e.g. resname, segid) not working on Residues and Segments
    created using add_Residue and add_Segment (Issue #3437)

Enhancements
  * Add support for millisecond and microsecond units (Issue #3473, PR #3491)
  * Adds :meth:`parse_n_atoms` to H5MD reader (Issue #3465)
  * Add option for custom compiler flags for C/C++ on build and remove march
    option from setup.cfg (Issue #3428, PR #3429).
  * Added R/S Chirality support to RDKit parsed molecules
  * Added MDAnalysis.lib.distances.minimize_vectors

Changes
  * TRZReader now defaults to a `dt` of 1.0 (instead of 0.0 previously) when
    it cannot be obtained from file (Issue #3257)
  * Dropped python 3.6 support and raised minimum numpy version to 1.18.0
    (NEP29)

Deprecations


08/21/21 tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,